FIX: desktop sizes

--- a/styles/sass/layout/_main.sass
+++ b/styles/sass/layout/_main.sass
@@ -2,7 +2,7 @@ main
 	display: grid
 	grid-template-columns: repeat(3, 1fr)
 	article
-		width: 33vw
+		width: 100%
 		height: 50vh
 		a
 			width: inherit
