--- a/styles/sass/libs/_vars.sass
+++ b/styles/sass/libs/_vars.sass
@@ -1,4 +1,4 @@
-$primary-color: #04cde7
-$secondary-color: #34a58e
-$text-color: #f0f0f0
-$bg-color: #242629
+$primary-color: #E4114Cff //amaranth
+$secondary-color: #ED54D2ff //purple-pizzazz
+$text-color: #FBF0F7ff //lavender-blush
+$bg-color: #3E0113ff //dark-sienna
