--- a/styles/sass/layout/_header.sass
+++ b/styles/sass/layout/_header.sass
@@ -1,8 +1,11 @@
 /* Header */
 header
-	@include flexCenter
+	position: sticky
+	display: flex
+	justify-content: space-between
 	color: $text-color
 	padding: 1.5em
+	max-height: 4em
 	text-transform: uppercase
 	a
 		margin-left: 1em
