--- a/styles/sass/layout/_main.sass
+++ b/styles/sass/layout/_main.sass
@@ -3,7 +3,7 @@ main
 	grid-template-columns: repeat(3, 1fr)
 	article
 		width: 100%
-		height: 50vh
+		height: calc(50vh - 2em)
 		a
 			width: inherit
 			height: inherit
